--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,91 @@
-*{padding: 0;margin: 0;border: 0;}
-*,*:before,*:after{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
-nav,footer,header,aside{display: block;}
-html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
-input,button,textarea{font-family:inherit;}
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner{padding:0;border:0;}
-a,a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
-ul li{list-style: none;}
-img{vertical-align: top;}
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+*,
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+:focus,
+:active {
+  outline: none;
+}
+a:focus,
+a:active {
+  outline: none;
+}
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+html,
+body {
+  line-height: 1;
+  font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+input::-ms-clear {
+  display: none;
+}
+button {
+  cursor: pointer;
+}
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+a,
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+ul li {
+  list-style: none;
+}
+img {
+  vertical-align: top;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: inherit;
+}
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: linear-gradient(to left top,#9D9D9D, #585858);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: linear-gradient(to left top, #9d9d9d, #585858);
 }
 
-
-.App{
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.App {
+  padding: 30px 0;
 }
 
-
-.mainBlock{
-  width: 55%;
+.mainBlock {
+  width: 100%;
+  max-width: 1000px;
   margin: 0 auto;
-  filter: drop-shadow(18px 18px 8px rgba(0, 0, 0, 0.25));;
+  padding: 0 20px;
+  filter: drop-shadow(18px 18px 8px rgba(0, 0, 0, 0.25));
 }
 
 .noteText {
@@ -43,31 +97,31 @@ body {
   border: 1px solid #000000;
   display: flex;
   justify-content: space-between;
-  padding: 0 20px;
   background-color: #fff;
+  padding: 10px 20px;
 }
 
 .noteName {
   font-size: 22px;
   margin-left: 10px;
   display: block;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .removeBtn {
-  width: 10%;
   background: none;
   border: none;
+  margin: 10px;
 }
 
 .removeBtnImg {
-  width: 50%;
-  transition: .5s;
+  width: 20px;
+  height: 20px;
+  transition: 0.5s;
 }
 
 .radioNote {
   display: block;
-  
 }
 
 .removeBtnImg:hover {
@@ -75,31 +129,32 @@ body {
 }
 
 .checkNote:checked + label {
-  text-decoration:line-through;
+  text-decoration: line-through;
 }
 
 .newNote {
   display: flex;
+  border-radius: 15px 15px 0px 0px;
+  overflow: hidden;
 }
 
 .newNoteInput {
-  width: 90%;
+  width: 100%;
   height: 50px;
-  border-radius: 15px 0px 0px 0px;
   border: none;
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
   padding-left: 15px;
 }
 
 .newNoteBtn {
   display: block;
-  width: 10%;
-  background-color: #4870FF;
+  height: 50px;
+  min-width: 100px;
+  background-color: #4870ff;
   border: none;
-  border-radius: 0px 15px 0px 0px;
-  color: #F5F5F5;
+  color: #f5f5f5;
   font-weight: 700;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .newNoteBtn:hover {
@@ -108,29 +163,28 @@ body {
 
 .footer {
   background-color: #fff;
-  height: 50px;
-  display: flex;
-  align-items: center;
+  height: 60px;
   border: 1px solid #000000;
   border-radius: 0px 0px 15px 15px;
 }
 
 .footerContent {
   display: flex;
+  height: 100%;
   justify-content: space-between;
-  width: 80%;
-  margin: 0 auto;
+  align-items: center;
+  margin: 0 20px;
 }
 
 .footerBtns {
   display: flex;
+  gap: 20px;
   justify-content: space-between;
-  width: 40%;
 }
 
 .footerFilter {
   display: block;
-  width: 30%;
+  width: 150px;
   height: 30px;
   border-radius: 10px;
   font-weight: 600;
@@ -142,4 +196,61 @@ body {
 
 .footerText {
   font-size: 18px;
+}
+
+.active {
+  background: rgb(167, 240, 58);
+  transition: background 0.3s;
+}
+
+@media (max-width: 1020px) {
+  .mainBlock {
+    filter: none;
+  }
+}
+
+@media (max-width: 700px) {
+  .footer {
+    height: auto;
+  }
+
+  .footerContent {
+    flex-direction: column-reverse;
+    padding: 20px 0;
+    align-items: stretch;
+    flex: 1;
+  }
+
+  .footerFilter {
+    width: auto;
+    flex: 1;
+  }
+
+  .footerText {
+    align-self: center;
+  }
+
+  .footerBtns {
+    margin-bottom: 15px;
+    flex: 1;
+  }
+}
+
+@media (max-width: 500px) {
+  .footerBtns {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .footerFilter {
+    min-height: 50px;
+  }
+
+  .newNote {
+    flex-direction: column;
+  }
+
+  .newNoteBtn {
+    width: 100%;
+  }
 }
