--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: linear-gradient(to left top, #9d9d9d, #585858);
+  min-height: 100vh;
 }
 
 .App {
